added new path to allow existing notes to be updated with a put request

--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -72,7 +72,7 @@ html, body {
 /* Animations for list item buttons */
 .delete-note, .edit-note {
   opacity: 0.5;
-  transition: all 0.3s ease;
+  transition: all 0.3s ease-out;
 }
 
 .delete-note:hover, .edit-note:hover {
