--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -1,20 +1,28 @@
+/* Set HTML to cover entire page */
 html, body {
   height: 100%;
   margin: 0;
   padding: 0;
 }
 
+/* Header ======================================= */
+/* Hide save button until saving is available */
 .save-note {
   display: none;
 }
 
+/* Spacing for header icons */
 .icons i {
   margin-left: 15px;
   margin-right: 15px;
   font-size: 1.5rem;
   cursor: pointer;
 }
+/* =============================================== */
 
+
+/* Notes Area ==================================== */
+/* Color and outlining rules */
 .note-textarea, .note-title {
   color: #000000;
   width: 100%;
@@ -22,22 +30,29 @@ html, body {
   border: none;
 }
 
+/* Set size of text area to fixed and offset for title */
 .note-textarea {
   resize: none;
   height: calc(100% - 63px);
   padding-top: 15px;
 }
 
+/* Set size and spacing of title */
 .note-title {
   height: 50px;
   margin-top: 13px;
   font-size: 3rem;
 }
 
+/* Coloring for read only inputs (currently commented out) */
 .note-title:read-only, .note-textarea:read-only {
   color: #757575;
 }
+/* =============================================== */
 
+
+/* Sidebar ======================================= */
+/* Spacing and sizing for the entire sidebar */
 .list-container .card {
   height: calc(100vh - 70px);
   border-bottom: none;
@@ -49,6 +64,7 @@ html, body {
   padding-left: 0;
 }
 
+/* Border decorations for list items */
 .list-container .list-group,
 .list-container .list-group-item:first-child,
 .list-container .card {
@@ -57,19 +73,24 @@ html, body {
   border-top-left-radius: 0;
 }
 
+/* Sizing for delete icons */
 .list-container i {
   font-size: 1.1rem;
   cursor: pointer;
 }
 
+/* Borders and sizing for list items */
 .list-container .list-group-item {
   border-left: none;
   border-right: none;
   padding: 20px;
   cursor: pointer;
 }
+/* ================================================ */
 
-/* Animations for list item buttons */
+
+/* List Item Buttons ============================== */
+/* Animations */
 .delete-note {
   opacity: 0.5;
   transition: all 0.2s ease-out;
@@ -81,5 +102,6 @@ html, body {
   -ms-transform: scale(1.3);
   transform: scale(1.3);
 };
+
 
 
